--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "gulp-webp": "4.0.1",
     "postcss": "8.2.14",
     "postcss-custom-properties": "11.0.0",
+    "postcss-import": "14.0.1",
     "posthtml-include": "1.7.1",
     "stylelint": "13.13.1",
     "stylelint-config-htmlacademy": "0.1.4",
